--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
         <div class="rescue-pulse"></div>
         <div class="container">
             <h2>Need Immediate Assistance?</h2>
-            <a href="index.html" class="btn" id="rescueBtn">
+            <a href="home.html" class="btn" id="rescueBtn">
                 <i class="fas fa-exclamation-triangle"></i> Rescue Now
             </a>
         </div>
